--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       section {
         display: block;
       }
+      
     </style>
   </head>
   <body>
+    <h1>Hello</h1>
     <h1>Привет</h1>
     <h3>подпись</h3>
   </body>
